# PB2S_Virtual_self_reflection_sandbox

./: .gitignore  ADAPTIVE_INTELLIGENCE_FRAMEWORK.json  CASE_STUDY_Live_Intelligence_Demo.md  CODE_OF_CONDUCT.md  COMPLETE_ADAPTIVE_INTELLIGENCE_v1_0.json  COMPLETE_DEVELOPMENT_PROCESS.md  CONTRIBUTING.md  EDUCATIONAL_RECORD_Complete.md  GAP_COMPLIANCE_COMPLETE.md  GITHUB_SETUP.md  MISSION_ACCOMPLISHED.md  PB2S_IRQ_Queue_Vo1.txt  PB2S_LEGAL_DISCLAIMER.md  PB2S_PPS_v01.txt  PB2S_REFLECT_wrap.txt  PB2S_SYSTEM_prompt.txt  PROJECT_COMPLETE_DOCUMENTATION.md  README.md  README_COMPLETE.md  SECURITY.md  THIRD_PARTY_GAP_ANALYSIS.md  UNIVERSAL_AI_PB2S_INSTRUCTIONS.md  adaptive_intelligence_engine.py  deep_intent_cycle.py  demo_complete_system.py  explicit_contradiction_analysis.py  final_demonstration.py  gap_compliance_enhancements.py  lacuna_analysis.py  live_agent_self_application.py  pb2s_core_config.json  pyproject.toml  requirements.txt  run_all.ps1  run_demo.py  stop_all.ps1  test_coordination.py  test_gap_compliance.py  test_internal_intelligence.py  test_pb2s_core.py  (+1 more)
.github/: FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  TEMPLATES_GUIDE.md
climate_lesson_output/: climate_lesson_20251001_034953.json  climate_lesson_20251001_035042.json  student_activities_20251001_034953.txt  student_activities_20251001_035042.txt  teacher_guide_20251001_034953.txt  teacher_guide_20251001_035042.txt
config/: agents.json  collaboration_framework.json  pb2s_core.json
examples/: basic_usage.py  climate_education_demo.py  demo_showcase.py  interactive_demo.py  (+1 more)
(+22 files in other folders)
