[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pb2s-twin"
version = "1.0.0"
description = "PB2S+Twin: Minimal-Safety Multi-Modal Manufacturing Architecture"
authors = [
    {name = "Shyamal Solanki", email = "author@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0", 
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "diffusers>=0.21.0",
    "cryptography>=41.0.0",
    "jsonschema>=4.19.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
]

[project.scripts]
pb2s-twin = "pb2s_twin.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true